--- a/css/main.css
+++ b/css/main.css
@@ -205,6 +205,20 @@ textarea {
 
 @media only screen and (min-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
+    #left-nav {
+        float: left;
+        margin-left: 0;
+        background-color: #ffffd0;
+        width: 100%;
+        padding: 2em 1em 2em 1em;
+        display: block;
+    }
+    #center {
+        width: 100%;
+        float: left;
+        background-color: red;
+        display: block;
+    }
 }
 
 @media print,
@@ -369,3 +383,4 @@ img {
 p {
     padding: 1em;
 }
+
